; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_pg_analyze_and_rewrite_params.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_pg_analyze_and_rewrite_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i8*, i32* }

@log_parser_stats = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [26 x i8] c"PARSE ANALYSIS STATISTICS\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pg_analyze_and_rewrite_params(i32* %0, i8* %1, i32 (%struct.TYPE_10__*, i8*)* %2, i8* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32 (%struct.TYPE_10__*, i8*)*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_10__*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 (%struct.TYPE_10__*, i8*)* %2, i32 (%struct.TYPE_10__*, i8*)** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32* %4, i32** %10, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = icmp ne i8* %14, null
  %16 = zext i1 %15 to i32
  %17 = call i32 @Assert(i32 %16)
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @TRACE_POSTGRESQL_QUERY_REWRITE_START(i8* %18)
  %20 = load i64, i64* @log_parser_stats, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %5
  %23 = call i32 (...) @ResetUsage()
  br label %24

24:                                               ; preds = %22, %5
  %25 = call %struct.TYPE_10__* @make_parsestate(i32* null)
  store %struct.TYPE_10__* %25, %struct.TYPE_10__** %11, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 0
  store i8* %26, i8** %28, align 8
  %29 = load i32*, i32** %10, align 8
  %30 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %31 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %30, i32 0, i32 1
  store i32* %29, i32** %31, align 8
  %32 = load i32 (%struct.TYPE_10__*, i8*)*, i32 (%struct.TYPE_10__*, i8*)** %8, align 8
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %34 = load i8*, i8** %9, align 8
  %35 = call i32 %32(%struct.TYPE_10__* %33, i8* %34)
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %37 = load i32*, i32** %6, align 8
  %38 = call i32* @transformTopLevelStmt(%struct.TYPE_10__* %36, i32* %37)
  store i32* %38, i32** %12, align 8
  br i1 true, label %39, label %43

39:                                               ; preds = %24
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %41 = load i32*, i32** %12, align 8
  %42 = call i32 @post_parse_analyze_hook(%struct.TYPE_10__* %40, i32* %41)
  br label %43

43:                                               ; preds = %39, %24
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %45 = call i32 @free_parsestate(%struct.TYPE_10__* %44)
  %46 = load i64, i64* @log_parser_stats, align 8
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %43
  %49 = call i32 @ShowUsage(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %50

50:                                               ; preds = %48, %43
  %51 = load i32*, i32** %12, align 8
  %52 = call i32* @pg_rewrite_query(i32* %51)
  store i32* %52, i32** %13, align 8
  %53 = load i8*, i8** %7, align 8
  %54 = call i32 @TRACE_POSTGRESQL_QUERY_REWRITE_DONE(i8* %53)
  %55 = load i32*, i32** %13, align 8
  ret i32* %55
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @TRACE_POSTGRESQL_QUERY_REWRITE_START(i8*) #1

declare dso_local i32 @ResetUsage(...) #1

declare dso_local %struct.TYPE_10__* @make_parsestate(i32*) #1

declare dso_local i32* @transformTopLevelStmt(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @post_parse_analyze_hook(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @free_parsestate(%struct.TYPE_10__*) #1

declare dso_local i32 @ShowUsage(i8*) #1

declare dso_local i32* @pg_rewrite_query(i32*) #1

declare dso_local i32 @TRACE_POSTGRESQL_QUERY_REWRITE_DONE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
